--- a/Myon/Protokoll/LM_Protokoll_main.tex
+++ b/Myon/Protokoll/LM_Protokoll_main.tex
@@ -30,7 +30,7 @@
 \newpage 
 
 \input{LM_Protokoll_intro}			% Physikalischer Hintergrund
-%\input{LM_Protokoll_experiment}		% Durchführung
+\input{LM_Protokoll_experiment}		% Durchführung
 \input{LM_Protokoll_ausw}			% Auswertung
 \input{LM_Protokoll_diskussion}		% Diskussion
 \include{LM_Protokoll_literatur}
