corrected something in LMpdf

--- a/Myon/Protokoll/LM_Protokoll_intro.tex
+++ b/Myon/Protokoll/LM_Protokoll_intro.tex
@@ -66,19 +66,20 @@
 	\subsection{Messprinzip und Versuchsaufbau}
         \subsubsection{Szintillatoren}
             Szintillatoren sind Körper, die bei Anregung durch Stoßprozesse mit geladenen Teilchen oder Photonen aufgenommene Energie durch Emission von Licht abgeben. Die deponierte Energie lässt sich mittels einer Photodiode oder eines Photomultipliers anhand der Lichtmenge messen. Die Intensität ergibt sich aus der Messung der Szintillationen pro Zeit.
-            Es gibt organische und \textbf{anorganische Szintillatoren}. Letztere sind Kristalle, welche mit sogenannten Aktivator-Zentren dotiert sind. Trifft ionisierende Strahlung auf dieses Kristall, erzeugt sie Exzitonen (Elektronen-Loch-Paare), freie Elektronen oder freie Löcher, die sich durch die Struktur bewegen, bis sie ein Aktivator-Zentrum treffen und dieses Anregen. Das AZ zerfällt infolgedessen unter Emission von Photonen in seinen Grundzustand. 
+            Es gibt organische und \textbf{anorganische Szintillatoren}. Letztere sind Kristalle, welche mit sogenannten Aktivator-Zentren dotiert sind. Trifft ionisierende Strahlung auf dieses Kristall, erzeugt sie Exzitonen (Elektronen-Loch-Paare), freie Elektronen oder freie Löcher, die sich durch die Struktur bewegen, bis sie ein Aktivator-Zentrum treffen und dieses anregen. Das Aktivator-Zentrum zerfällt infolgedessen unter Emission von Photonen in seinen Grundzustand. 
             \textbf{Organische Szintillatoren} können ebenfalls Kristalle, aber auch Flüssigkeiten oder Polymere sein. Hierbei werden Molekülzustände eines primären Floureszenzstoffes angeregt. Bei deren Zerfall emittieren sie Photonen aus dem UV-Bereich. Da UV-Strahlung in den meisten transparente Materialien jedoch nur kurze Distanzen durchdringt, muss ein weiterer Floureszenzstoff beigefügt werden.
+            Dieses Experiment verwendet organische Szintillatoren aus Plaste.
         \subsubsection{Photomultiplier}
             Photoelektronenvervielfacher oder engl. Photomultiplier dienen der Vervielfachung von Elektronen, die durch den äußeren photoelektrischen Effekt aus einer Photokathode herausgelöst wurden. Diese werden durch ein elektrisches Feld beschleunigt und auf Elektroden, die sogenannten Dynoden, gelenkt, um wiederum aus deren Oberfläche mehrere neue Elektronen auszulösen. Dabei löst jedes auftreffende Elektron eine bestimmte Anzahl neue heraus. Die so herausgelösten Elektronen werden ihrerseits zur nächsten Dynode beschleunigt, um jeweils die gleiche Zahl neue Elektronen herauszuschlagen. Die Zahl der herausgelösten Elektronen nimmt damit von einer zur nächsten Stufe exponentiell zu. Um dies zu verwirklichen, muss das Potential mit zunehmendem Weg und wachsender Dynodenstufe immer mehr im positiven Potential liegen. Nach $n$ Dynoden (also $n$ Stufen) können die vervielfachten Elektronen auf eine Anode treffen und über die Masse abfließen, um an einem Widerstand einen Spannungsabfall zu erzeugen, der letztlich das Ausgangssignal der Messung liefert.
             Der Vorgang ist schematisch gut in Abbildung \ref{pm} zutun, wobei man hier auch eine Spannungsteilerkette liegt. Mit ihrer Hilfe wird die nach rechts zunehmende Potentialpositivität erreicht. 
             \begin{figure}[htbp]
                 \centering \includegraphics[scale=1]{pic/pm.png}
-                \caption{\cite{pm} Skizze des Aufbaus eines PM}
+                \caption{Skizze des Aufbaus eines PM \cite{pm}}
                 \label{pm}
             \end{figure}
         \subsubsection{Messprinzip Aufbau 1}
-            Wie in Abbildung \ref{prinzip} klar zu erkennen ist, besteht der Aufbau aus PMn, Szintillatoren,Lichtleitern einer Spule und Kupferplatten. Genau genommen besteht der Aufbau aus drei PMn und zwei Kupferplatten der Dicke $1\unit{cm}$. Diese Platten bilden das Target, welches Myonen stoppt, welche in PM3 nicht mehr detektiert werden. Das so ausgelöste Signal ($12\overline{3}$) startet in einem Time-to-Digital-Converter (TDC) eine Zeitmessung, welche entweder durch das Signal $2\cdot\overline 3$ für nach PM2 (oben) oder Signal $\overline 2 \cdot 3$ für nach PM3 (unten) gerichtete Positronen gestoppt wird. Durch Start der Zeitmessung wird ein Koinzidenzzeitfenster von $10\unit{\mu s}$ geöffnet, welches zufällige Koinzidenzen stark minimieren soll. Diskrinatoren wandeln die in den Photomultipliern erzeugten Signale in einheitliche Signale mit der Breite von $40\unit{ns}$ um und unterdrücken sämtliche Signale unterhalb von $-100\unit{mV}$.
-            Zusätzlich zum Koinzidenzzeitfenster gibt es eine Koinzidenzeinheit, die die benötigten Koinzidenzsignale liefert. Der TDC wandelt seine gemessenen Zeiten in digitale Signale um. Die so gemessenen Ereignisse werden an einen PC übertragen und von diesem über eine Messsoftware ausgelesen und gespeichert. Es existieren für die Auswertung ein oberes und ein unteres Zeitspektrum mit jeweils 256 Kanälen, welche jeweils eine Breite von $1\unit{\mu s}$ pro $24Hz$ besitzen. 
+            Wie in Abbildung \ref{prinzip} klar zu erkennen ist, besteht der Aufbau aus PMs, Szintillatoren, Lichtleitern einer Spule und Kupferplatten. Genau genommen besteht der Aufbau aus drei PMs und zwei Kupferplatten der Dicke $1\unit{cm}$. Diese Platten bilden das Target, welches Myonen stoppt, welche in PM3 nicht mehr detektiert werden. Das so ausgelöste Signal ($12\overline{3}$) startet in einem Time-to-Digital-Converter (TDC) eine Zeitmessung, welche entweder durch das Signal $2\cdot\overline 3$ für nach PM2 (oben) oder Signal $\overline 2 \cdot 3$ für nach PM3 (unten) fliegende Positronen gestoppt wird. Durch Start der Zeitmessung wird ein Koinzidenzzeitfenster von $10\unit{\mu s}$ geöffnet, welches zufällige Koinzidenzen stark minimieren soll. Diskriminatoren wandeln die in den Photomultipliern erzeugten Signale in einheitliche Signale mit der Breite von $40\unit{ns}$ um und unterdrücken sämtliche Signale unterhalb von $-200\unit{mV}$.
+            Zusätzlich zum Koinzidenzzeitfenster gibt es eine Koinzidenzeinheit, die die benötigten Koinzidenzsignale liefert. Der TDC wandelt seine gemessenen Zeiten in digitale Signale um. Die so gemessenen Ereignisse werden an einen PC übertragen und von diesem über eine Messsoftware ausgelesen und gespeichert. Es existieren für die Auswertung ein oberes und ein unteres Zeitspektrum mit jeweils 256 Kanälen, welche jeweils eine Breite von $1\unit{\mu s}/24,000$ besitzen. \cite{PA} 
             \begin{figure}
                 \centering \includegraphics[scale=1.2]{pic/aufbau.png}
                 \caption{\cite{pm} Prinzipskizze des Versuchsaufbaus}
