corrected something in LMpdf

--- a/Myon/Protokoll/LM_Protokoll_intro.tex
+++ b/Myon/Protokoll/LM_Protokoll_intro.tex
@@ -71,7 +71,7 @@
             Dieses Experiment verwendet organische Szintillatoren aus Plaste.
         \subsubsection{Photomultiplier}
             Photoelektronenvervielfacher oder engl. Photomultiplier dienen der Vervielfachung von Elektronen, die durch den äußeren photoelektrischen Effekt aus einer Photokathode herausgelöst wurden. Diese werden durch ein elektrisches Feld beschleunigt und auf Elektroden, die sogenannten Dynoden, gelenkt, um wiederum aus deren Oberfläche mehrere neue Elektronen auszulösen. Dabei löst jedes auftreffende Elektron eine bestimmte Anzahl neue heraus. Die so herausgelösten Elektronen werden ihrerseits zur nächsten Dynode beschleunigt, um jeweils die gleiche Zahl neue Elektronen herauszuschlagen. Die Zahl der herausgelösten Elektronen nimmt damit von einer zur nächsten Stufe exponentiell zu. Um dies zu verwirklichen, muss das Potential mit zunehmendem Weg und wachsender Dynodenstufe immer mehr im positiven Potential liegen. Nach $n$ Dynoden (also $n$ Stufen) können die vervielfachten Elektronen auf eine Anode treffen und über die Masse abfließen, um an einem Widerstand einen Spannungsabfall zu erzeugen, der letztlich das Ausgangssignal der Messung liefert.
-            Der Vorgang ist schematisch gut in Abbildung \ref{pm} zutun, wobei man hier auch eine Spannungsteilerkette liegt. Mit ihrer Hilfe wird die nach rechts zunehmende Potentialpositivität erreicht. 
+            Der Vorgang ist schematisch gut in Abbildung \ref{pm} zu sehen. Mit ihrer Hilfe wird die nach rechts zunehmende Potentialpositivität erreicht. 
             \begin{figure}[htbp]
                 \centering \includegraphics[scale=1]{pic/pm.png}
                 \caption{Skizze des Aufbaus eines PM \cite{pm}}
