corrected something in LMpdf

--- a/Myon/Protokoll/LM_Protokoll_experiment.tex
+++ b/Myon/Protokoll/LM_Protokoll_experiment.tex
@@ -75,7 +75,7 @@
                     \caption{Spektren der Energieverteilung der im Detektor deponierten Energien}
                     \label{spektren}
                 \end{figure}
-            Um einen besseren Fit zu erhalten, wurden die Counts in den Punkten, die sehr weit vom Peak entfernt sind, nicht berücksichtigt. Die finalen Fitparameter sind in Tabelle \ref{tab:fitparams} zusammengestellt.
+            Um einen besseren Fit zu erhalten, wurden die Counts in den Punkten, die sehr weit vom Peak entfernt sind, nicht berücksichtigt. Der lange Ausläufer entsteht dadurch, dass die einfallenden Myonen mit steigender Energie weniger oft Energie so im Szintillator deponieren, dass die an den PM abgestrahlten Photonen eine für den Photodetektor passende Wellenlänge besitzen. Die finalen Fitparameter sind in Tabelle \ref{tab:fitparams} zusammengestellt.
             \begin{table}[ht]
             	\centering
                 \begin{tabular}{c|c|c|c|c}
